# Agent-knowledge

./: .gitignore  FIXES.md  README.md  SPEC.md  TRAIN.md  pyproject.toml  render.yaml  requirements-training-extra.txt  requirements-training.txt  requirements.txt  train.py
agent-ai/models/adapter/: adapter_config.json  config.json
api/: __init__.py  auth_utils.py  main.py  state.py
api/routes/: __init__.py  agent_chat.py  agents.py  api_keys.py  audit.py  auth.py  evaluation.py  feedback.py  knowledge.py  memory.py  patterns.py  plans.py  sessions.py  tasks.py  tools.py  training.py  workspace.py
core/: __init__.py
core/agent_manager/: __init__.py  agent.py  communication.py  manager.py
core/ai_runtime/: engine.py
core/ai_runtime/providers/: __init__.py  anthropic.py  local.py  openai.py
core/context_manager/: __init__.py  compression.py  manager.py
core/knowledge_base/: __init__.py  entities.py  graph.py  manager.py
core/memory_manager/: __init__.py  episodic.py  manager.py  procedural.py  semantic.py
core/multi_agent/: __init__.py  collaboration.py  consensus.py  orchestrator.py
core/planning_engine/: __init__.py  decomposer.py  planner.py  scheduler.py
core/reasoning_engine/: __init__.py  chain_of_thought.py  reasoner.py  tree_of_thought.py
core/self_evaluation/: __init__.py  evaluator.py
core/self_improvement/: __init__.py  learner.py
core/task_manager/: __init__.py  executor.py  policies.py  queue.py
core/tool_manager/: __init__.py  executor.py  registry.py  sandbox.py
core/training/: __init__.py  adapters.py  cli.py  config.py  dataset.py  evaluator.py  loRA.py  monitoring.py  pretrain.py  trainer.py
core/training/scripts/: batch_by_batch_demo.py  run_actual.py  run_finetune.sh  train.sh  train_local.py
data/: coding_knowledge.jsonl  sample_chat.jsonl  sample_instruction.json  sample_train.jsonl
database/: __init__.py  db.py  models.py
database/migrations/: 001_initial_schema.sql
docs/: TRAINING.md
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: agent.js  agents.js  apiKeys.js  audit.js  auth.js  client.js  evaluation.js  feedback.js  knowledge.js  memory.js  patterns.js  plans.js  sessions.js  tasks.js  tools.js  training.js  workspace.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/pages/: AgentsPage.jsx  ApiKeysPage.jsx  AuditPage.jsx  ChatPage.jsx  DashboardPage.jsx  EvaluationPage.jsx  (+12 more)
infrastructure/docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml
infrastructure/kubernetes/: deployment.yaml
tests/: test_training_adapters.py
tools/: __init__.py  base.py  filesystem.py  web_search.py
(+8 files in other folders)
